--- a/package.json
+++ b/package.json
@@ -8,13 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tiptap/extension-highlight": "^2.0.0-beta.30",
+    "@tiptap/extension-image": "^2.0.0-beta.24",
+    "@tiptap/extension-text-align": "^2.0.0-beta.28",
+    "@tiptap/starter-kit": "^2.0.0-beta.145",
+    "@tiptap/vue-3": "^2.0.0-beta.81",
     "@vuelidate/core": "^2.0.0-alpha.32",
     "@vuelidate/validators": "^2.0.0-alpha.25",
+    "@vueup/vue-quill": "^1.0.0-beta.7",
     "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "normalize.css": "^8.0.1",
     "postcss": "^7.0.39",
+    "quill-image-uploader": "^1.2.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2",
