--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "quill-image-uploader": "^1.2.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
+    "vue2-editor": "^2.10.3",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
   },
