--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "autoprefixer": "^9.8.8",
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
+    "focus-trap": "^6.7.1",
+    "focus-trap-vue": "^3.2.1",
     "normalize.css": "^8.0.1",
     "postcss": "^7.0.39",
     "quill-image-uploader": "^1.2.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.12",
+    "vue3-click-away": "^1.2.1",
     "vuex": "^4.0.2",
     "vuex-persist": "^3.1.3"
   },
